Ch10 Questions practiced

--- a/javaBasics/docs/Ch10.md
+++ b/javaBasics/docs/Ch10.md
@@ -127,7 +127,7 @@ classDiagram
 ![[Ch10-1666970802342.jpeg]]
 
 #### Todos
-- [ ] Practice BigInteger class
+- [x] Practice BigInteger class ✅ 2022-10-30
 - [ ] Practice String class
 - [ ] Practice Regex
-- [ ] Practice Questions
+- [x] Practice Questions ✅ 2022-10-30
