--- a/dailyNotes/2022-10-27.md
+++ b/dailyNotes/2022-10-27.md
@@ -11,6 +11,6 @@
 6 - 8	Data Intensive Book
 11 - 12	Cassandra
 
-- [ ] Follow timeLine
+- [x] Follow timeLine ✅ 2022-11-21
 	- Timeline failed due to personal tasks
 	- Java started at 5pm
