--- a/javaBasics/docs/Ch10.md
+++ b/javaBasics/docs/Ch10.md
@@ -128,6 +128,6 @@ classDiagram
 
 #### Todos
 - [x] Practice BigInteger class ✅ 2022-10-30
-- [ ] Practice String class
+- [x] Practice String class ✅ 2022-11-05
 - [ ] Practice Regex
 - [x] Practice Questions ✅ 2022-10-30
