Design Patterns started - Adapter pattern completed - Observer pattern completed

--- a/javaBasics/docs/Ch10.md
+++ b/javaBasics/docs/Ch10.md
@@ -129,5 +129,5 @@ classDiagram
 #### Todos
 - [x] Practice BigInteger class ✅ 2022-10-30
 - [x] Practice String class ✅ 2022-11-05
-- [ ] Practice Regex
+- [x] Practice Regex ✅ 2022-12-22
 - [x] Practice Questions ✅ 2022-10-30
