--- a/javaBasics/docs/Ch11.md
+++ b/javaBasics/docs/Ch11.md
@@ -65,6 +65,19 @@ System.out.println(o.toString());
 ###### Logic behind Dynamic binding
 ![[Ch11-1669057803459.jpeg]]
 
+#### Instanceof
+instanceof checks both class and whether the supplied object is null or not.
+```java
+Object object = new DerivedClass();
+return DerivedClass instanceof object;// will return true
+```
+
+#### Visibility
+![[Ch11-1670740700147.jpeg]]
+
+#### Final keyword
+final class or method can't be extended
+
 #### Questions
 > Q: Can we access private data members of superclass in subclass using **super** keyword?
 > A: No we can't access private members, methods of the base class, it can though be used to trigger its constructors and methods
