Completed some content, started with Java 8 features

--- a/dailyNotes/2023-01-02.md
+++ b/dailyNotes/2023-01-02.md
@@ -1,2 +1,2 @@
 - [x] Complete Ch 11 and 12 from Daniel lang from 8:30-9:30pm ✅ 2023-01-05
-- [ ] Start Java collections from 11pm
+- [x] Start Java collections from 11pm ✅ 2023-01-07
