--- a/dailyNotes/2023-01-05.md
+++ b/dailyNotes/2023-01-05.md
@@ -1,3 +1,3 @@
-- [ ] 5 - 7: Udemy course
-- [ ] 8 - 9: Find some project to work upon
-- [ ] 9 - 10: Some sorting questions
+- [x] 5 - 7: Udemy course ✅ 2023-01-07
+- [x] 8 - 9: Find some project to work upon ✅ 2023-01-07
+- [x] 9 - 10: Some sorting questions ✅ 2023-01-07
