Completed with Java streams

--- a/dailyNotes/2023-01-09.md
+++ b/dailyNotes/2023-01-09.md
@@ -1,4 +1,4 @@
-- [ ] Do streams tommorrow.
+- [x] Do streams tommorrow. ✅ 2023-01-10
 - [ ] Do some basics related questions tommorrow.
 - [ ] Start with Aditya Verma Playlists tommorrow.
 - [ ] Do something in networking course.
