--- a/dailyNotes/2023-01-10.md
+++ b/dailyNotes/2023-01-10.md
@@ -1,3 +1,3 @@
 - [x] Libraries continued ✅ 2023-01-10
 - [ ] Start from default methods(Page 64 tomm)
-- [ ] Start with Aditya Verma Playlists.
+- [x] Start with Aditya Verma Playlists. ✅ 2023-01-12
