--- a/dailyNotes/2023-01-09.md
+++ b/dailyNotes/2023-01-09.md
@@ -1,2 +1,2 @@
 - [x] Do streams tommorrow. ✅ 2023-01-10
-- [ ] Do some basics related questions tommorrow.
+- [x] Do some basics related questions tommorrow. ✅ 2023-01-20
